# Parallel-And-Distributed-Programming

./: README.md
Distributed-Hough-Transform-Project/: .sending_cv_mat_through_mpi.cpp.swp  compilation_script.sh  compile_and_run_cv_mat_mpi_demo.sh  compile_and_run_distributed_hough_transform.sh  compile_and_run_sequential_hough_transform.sh  distributed_hough_transform.cpp  run.sh  sending_cv_mat_through_mpi.cpp  sequential_hough  sequential_hough_transform.cpp
Distributed-Hough-Transform-Project/docs/: doc.aux  doc.out  doc.tex
Labs/Lab-1/BankAccounts/: CMakeLists.txt  main.cpp
Labs/Lab-1/BankAccounts/Model/: BankAccount.cpp  BankAccount.h  BankDetailsState.cpp  BankDetailsState.h  Model.h  Operation.cpp  Operation.h  OperationLog.cpp  OperationLog.h
Labs/Lab-1/BankAccounts/Repository/: BankAccountRepository.cpp  BankAccountRepository.h  Repository.cpp  Repository.h
Labs/Lab-1/BankAccounts/Service/: BankService.cpp  BankService.h
Labs/Lab-1/BankAccounts/UI/: BankUI.cpp  BankUI.h
Labs/Lab-7/MPI-Polynomial-Multiplication/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  PolynomialArithmetic.cpp  PolynomialArithmetic.h  README.md  ThreadPool.h  compilation_script.sh  doc.tex  execution_times_plot.py  generateRandomPolynomials  generate_polynomials.sh  main.cpp  mpirun_script.sh  run
Labs/Lab-8/DistributedSharedMemorySystem/: CMakeLists.txt  DistributedSharedMemoryOperations.cpp  DistributedSharedMemoryOperations.h  Message.cpp  Message.h  compilation_script.sh  main.cpp  mpirun_script.sh  run
MPI-Hello-World/: compilation_script.sh  hello_world
(+49 files in other folders)
